kubernetes/init/instance-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: isolet
  labels:
    app: namespace
