kubernetes/init/network-policy.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: isolet
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ssh-only
  namespace: isolet
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - ports:
        - port: 22
